# dragNdrop-app

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: filesystem.json
src-tauri/src/: main.rs
src/components/: menu-item.tsx  progress-bar.tsx  separator.tsx
